<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.SignupActivity">

    <LinearLayout
        android:layout_margin="56dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/username"
            android:hint="@string/username"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/repeat"
            android:hint="@string/repeat"
            android:inputType="textPassword"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/validation"
            android:textColor="@color/colorAccent"
            style="?attr/buttonBarButtonStyle"
            android:text="@string/validation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>